--- a/Projekt MVC/appsettings.json
+++ b/Projekt MVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Projekt_MVCContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Projekt MVC;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
